MyOrders fixed align item center

--- a/client/src/pages/myOrder/myorder.css
+++ b/client/src/pages/myOrder/myorder.css
@@ -6,6 +6,7 @@
     font-weight: 600;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 .single-order{
     margin-left: 100px;
